# MNNKit

./: .gitignore  MNN Kit Terms of Service 2019.12.19.docx  README.md  README_CN.md  license
Android/: build.gradle
Android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro  release.keystore
Android/app/src/androidTest/java/com/tsia/example/mnnkitdemo/: ExampleInstrumentedTest.java
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/com/alibaba/android/mnnkit/demo/: FaceDetectionActivity.java  FaceDetectionImageActivity.java  HandGestureDetectionActivity.java  HandGestureDetectionImageActivity.java  MainActivity.java  PortraitSegmentationActivity.java  PortraitSegmentationImageActivity.java  VideoBaseActivity.java
Android/app/src/main/java/com/alibaba/android/mnnkit/demo/utils/: Common.java  PermissionUtils.java
Android/app/src/main/java/com/alibaba/android/mnnkit/demo/view/: CameraView.java
Android/app/src/main/jni/: kitdemo.cpp
Android/app/src/main/res/layout/: activity_face_detection.xml  activity_face_detection_image.xml  activity_hand_gesture_detection.xml  activity_hand_gesture_detection_image.xml  activity_main.xml  activity_portrait_segmentation.xml  activity_portrait_segmentation_image.xml  activity_video_base.xml  content_face_detection.xml  content_video_base.xml
Android/app/src/main/res/menu/: menu_hand_image.xml  menu_portrait_image.xml  menu_video.xml
Android/app/src/main/res/values/: strings.xml
Android/app/src/test/java/com/tsia/example/mnnkitdemo/: ExampleUnitTest.java
doc/: FaceDetection_CN.md  (+3 more)
iOS/: Podfile
(+483 files in other folders)
